# CLI-Functions

./: README.md
github-mcp/: SKILL.md
github-mcp/agents/: openai.yaml
github-mcp/references/: tools-catalog.md  tools.raw.json
google/: .gitignore  GoogleCLI.py  README.md  SKILL.md  requirements.txt
google-cli/: GoogleCLI.py  SKILL.md  requirements.txt
steam-cli/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
steam-cli/docs/: mapeamento_inicial.md  planejamento.md
steam-cli/skills/: SKILL.md
steam-cli/skills/agents/: openai.yaml
steam-cli/steam_cli/: __init__.py  __main__.py  cli.py  config.py  errors.py  output.py
steam-cli/steam_cli/commands/: __init__.py  app.py  client.py  diagnose.py  games.py  user.py
steam-cli/steam_cli/launchers/: __init__.py  posix.py  windows.py
steam-cli/steam_cli/models/: result.py  user.py
steam-cli/steam_cli/providers/: steam_client.py  steam_storefront.py  steam_web_api.py
steam-cli/steam_cli/renderers/: json_renderer.py  text_renderer.py
steam-cli/steam_cli/services/: app_info.py  app_resolver.py  client_actions.py  identity.py
youtube-cli/: README.md  SKILL.md  YoutubeCLI.py  requirements.txt
